qt-restricted-extras/qscintilla6/gen_qscilexerd.h

class QColor;
class QFont;
class QMetaObject;
class QObject;
class QsciLexerD;
typedef struct QChildEvent QChildEvent;
typedef struct QColor QColor;
typedef struct QEvent QEvent;
typedef struct QFont QFont;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QSettings QSettings;
typedef struct QTimerEvent QTimerEvent;
typedef struct QsciLexerD QsciLexerD;
bool QsciLexerD_override_virtual_setEolFill(void* self, intptr_t slot);
void QsciLexerD_virtualbase_setEolFill(void* self, bool eoffill, int style);
bool QsciLexerD_override_virtual_setFont(void* self, intptr_t slot);
void QsciLexerD_virtualbase_setFont(void* self, QFont* f, int style);
bool QsciLexerD_override_virtual_setPaper(void* self, intptr_t slot);
void QsciLexerD_virtualbase_setPaper(void* self, QColor* c, int style);
bool QsciLexerD_override_virtual_readProperties(void* self, intptr_t slot);
bool QsciLexerD_virtualbase_readProperties(void* self, QSettings* qs, struct miqt_string prefix);
bool QsciLexerD_override_virtual_writeProperties(void* self, intptr_t slot);
bool QsciLexerD_virtualbase_writeProperties(const void* self, QSettings* qs, struct miqt_string prefix);
bool QsciLexerD_override_virtual_event(void* self, intptr_t slot);
bool QsciLexerD_virtualbase_event(void* self, QEvent* event);
bool QsciLexerD_override_virtual_eventFilter(void* self, intptr_t slot);
bool QsciLexerD_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QsciLexerD_override_virtual_timerEvent(void* self, intptr_t slot);
void QsciLexerD_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QsciLexerD_override_virtual_childEvent(void* self, intptr_t slot);
void QsciLexerD_virtualbase_childEvent(void* self, QChildEvent* event);
bool QsciLexerD_override_virtual_customEvent(void* self, intptr_t slot);
void QsciLexerD_virtualbase_customEvent(void* self, QEvent* event);
bool QsciLexerD_override_virtual_connectNotify(void* self, intptr_t slot);
void QsciLexerD_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QsciLexerD_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QsciLexerD_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QsciLexerD_staticMetaObject();
void QsciLexerD_delete(QsciLexerD* self);