qt-restricted-extras/qscintilla6/gen_qscilexerd.nim

proc fQsciLexerD_virtualbase_setEolFill(self: pointer, eoffill: bool, style: cint): void{.importc: "QsciLexerD_virtualbase_setEolFill".}
proc fcQsciLexerD_override_virtual_setEolFill(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_setEolFill".}
proc fQsciLexerD_virtualbase_setFont(self: pointer, f: pointer, style: cint): void{.importc: "QsciLexerD_virtualbase_setFont".}
proc fcQsciLexerD_override_virtual_setFont(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_setFont".}
proc fQsciLexerD_virtualbase_setPaper(self: pointer, c: pointer, style: cint): void{.importc: "QsciLexerD_virtualbase_setPaper".}
proc fcQsciLexerD_override_virtual_setPaper(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_setPaper".}
proc fQsciLexerD_virtualbase_readProperties(self: pointer, qs: pointer, prefix: struct_miqt_string): bool{.importc: "QsciLexerD_virtualbase_readProperties".}
proc fcQsciLexerD_override_virtual_readProperties(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_readProperties".}
proc fQsciLexerD_virtualbase_writeProperties(self: pointer, qs: pointer, prefix: struct_miqt_string): bool{.importc: "QsciLexerD_virtualbase_writeProperties".}
proc fcQsciLexerD_override_virtual_writeProperties(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_writeProperties".}
proc fQsciLexerD_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QsciLexerD_virtualbase_event".}
proc fcQsciLexerD_override_virtual_event(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_event".}
proc fQsciLexerD_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QsciLexerD_virtualbase_eventFilter".}
proc fcQsciLexerD_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_eventFilter".}
proc fQsciLexerD_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QsciLexerD_virtualbase_timerEvent".}
proc fcQsciLexerD_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_timerEvent".}
proc fQsciLexerD_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QsciLexerD_virtualbase_childEvent".}
proc fcQsciLexerD_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_childEvent".}
proc fQsciLexerD_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QsciLexerD_virtualbase_customEvent".}
proc fcQsciLexerD_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_customEvent".}
proc fQsciLexerD_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QsciLexerD_virtualbase_connectNotify".}
proc fcQsciLexerD_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_connectNotify".}
proc fQsciLexerD_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QsciLexerD_virtualbase_disconnectNotify".}
proc fcQsciLexerD_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_disconnectNotify".}
proc fcQsciLexerD_staticMetaObject(): pointer {.importc: "QsciLexerD_staticMetaObject".}
proc fcQsciLexerD_delete(self: pointer) {.importc: "QsciLexerD_delete".}


func init*(T: type gen_qscilexerd_types.QsciLexerD, h: ptr cQsciLexerD): gen_qscilexerd_types.QsciLexerD =
  T(h: h)
proc create*(T: type gen_qscilexerd_types.QsciLexerD, ): gen_qscilexerd_types.QsciLexerD =

  gen_qscilexerd_types.QsciLexerD.init(fcQsciLexerD_new())
proc create*(T: type gen_qscilexerd_types.QsciLexerD, parent: gen_qobject.QObject): gen_qscilexerd_types.QsciLexerD =

  gen_qscilexerd_types.QsciLexerD.init(fcQsciLexerD_new2(parent.h))
proc metaObject*(self: gen_qscilexerd_types.QsciLexerD, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQsciLexerD_metaObject(self.h))

proc metacast*(self: gen_qscilexerd_types.QsciLexerD, param1: cstring): pointer =

  fcQsciLexerD_metacast(self.h, param1)

proc metacall*(self: gen_qscilexerd_types.QsciLexerD, param1: cint, param2: cint, param3: pointer): cint =

  fcQsciLexerD_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qscilexerd_types.QsciLexerD, s: cstring): string =

  let v_ms = fcQsciLexerD_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc language*(self: gen_qscilexerd_types.QsciLexerD, ): cstring =

  (fcQsciLexerD_language(self.h))

proc lexer*(self: gen_qscilexerd_types.QsciLexerD, ): cstring =

  (fcQsciLexerD_lexer(self.h))

proc autoCompletionWordSeparators*(self: gen_qscilexerd_types.QsciLexerD, ): seq[string] =

  var v_ma = fcQsciLexerD_autoCompletionWordSeparators(self.h)
  var vx_ret = newSeq[string](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[struct_miqt_string]](v_ma.data)
  for i in 0 ..< v_ma.len:
    let vx_lv_ms = v_outCast[i]
    let vx_lvx_ret = string.fromBytes(toOpenArrayByte(vx_lv_ms.data, 0, int(vx_lv_ms.len)-1))
    c_free(vx_lv_ms.data)
    vx_ret[i] = vx_lvx_ret
  vx_ret

proc blockEnd*(self: gen_qscilexerd_types.QsciLexerD, ): cstring =

  (fcQsciLexerD_blockEnd(self.h))

proc blockStart*(self: gen_qscilexerd_types.QsciLexerD, ): cstring =

  (fcQsciLexerD_blockStart(self.h))

proc blockStartKeyword*(self: gen_qscilexerd_types.QsciLexerD, ): cstring =

  (fcQsciLexerD_blockStartKeyword(self.h))

proc braceStyle*(self: gen_qscilexerd_types.QsciLexerD, ): cint =

  fcQsciLexerD_braceStyle(self.h)

proc wordCharacters*(self: gen_qscilexerd_types.QsciLexerD, ): cstring =

  (fcQsciLexerD_wordCharacters(self.h))

proc defaultColor*(self: gen_qscilexerd_types.QsciLexerD, style: cint): gen_qcolor.QColor =

  gen_qcolor.QColor(h: fcQsciLexerD_defaultColor(self.h, style))

proc defaultEolFill*(self: gen_qscilexerd_types.QsciLexerD, style: cint): bool =

  fcQsciLexerD_defaultEolFill(self.h, style)

proc defaultFont*(self: gen_qscilexerd_types.QsciLexerD, style: cint): gen_qfont.QFont =

  gen_qfont.QFont(h: fcQsciLexerD_defaultFont(self.h, style))

proc defaultPaper*(self: gen_qscilexerd_types.QsciLexerD, style: cint): gen_qcolor.QColor =

  gen_qcolor.QColor(h: fcQsciLexerD_defaultPaper(self.h, style))

proc keywords*(self: gen_qscilexerd_types.QsciLexerD, set: cint): cstring =

  (fcQsciLexerD_keywords(self.h, set))

proc description*(self: gen_qscilexerd_types.QsciLexerD, style: cint): string =

  let v_ms = fcQsciLexerD_description(self.h, style)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc refreshProperties*(self: gen_qscilexerd_types.QsciLexerD, ): void =

  fcQsciLexerD_refreshProperties(self.h)

proc foldAtElse*(self: gen_qscilexerd_types.QsciLexerD, ): bool =

  fcQsciLexerD_foldAtElse(self.h)

proc foldComments*(self: gen_qscilexerd_types.QsciLexerD, ): bool =

  fcQsciLexerD_foldComments(self.h)

proc foldCompact*(self: gen_qscilexerd_types.QsciLexerD, ): bool =

  fcQsciLexerD_foldCompact(self.h)

proc setFoldAtElse*(self: gen_qscilexerd_types.QsciLexerD, fold: bool): void =

  fcQsciLexerD_setFoldAtElse(self.h, fold)

proc setFoldComments*(self: gen_qscilexerd_types.QsciLexerD, fold: bool): void =

  fcQsciLexerD_setFoldComments(self.h, fold)

proc setFoldCompact*(self: gen_qscilexerd_types.QsciLexerD, fold: bool): void =

  fcQsciLexerD_setFoldCompact(self.h, fold)

proc tr2*(_: type gen_qscilexerd_types.QsciLexerD, s: cstring, c: cstring): string =

  let v_ms = fcQsciLexerD_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr3*(_: type gen_qscilexerd_types.QsciLexerD, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQsciLexerD_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc blockEnd1*(self: gen_qscilexerd_types.QsciLexerD, style: ptr cint): cstring =

  (fcQsciLexerD_blockEnd1(self.h, style))

proc blockStart1*(self: gen_qscilexerd_types.QsciLexerD, style: ptr cint): cstring =

  (fcQsciLexerD_blockStart1(self.h, style))

proc blockStartKeyword1*(self: gen_qscilexerd_types.QsciLexerD, style: ptr cint): cstring =

  (fcQsciLexerD_blockStartKeyword1(self.h, style))

proc QsciLexerDmetaObject*(self: gen_qscilexerd_types.QsciLexerD, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fQsciLexerD_virtualbase_metaObject(self.h))

type QsciLexerDmetaObjectProc* = proc(): gen_qobjectdefs.QMetaObject
proc onmetaObject*(self: gen_qscilexerd_types.QsciLexerD, slot: QsciLexerDmetaObjectProc) =
  # TODO check subclass
  var tmp = new QsciLexerDmetaObjectProc
  tmp[] = slot
  GC_ref(tmp)
  fcQsciLexerD_override_virtual_metaObject(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QsciLexerD_metaObject(self: ptr cQsciLexerD, slot: int): pointer {.exportc: "miqt_exec_callback_QsciLexerD_metaObject ".} =
  var nimfunc = cast[ptr QsciLexerDmetaObjectProc](cast[pointer](slot))

  let virtualReturn = nimfunc[]( )

  virtualReturn.h
proc QsciLexerDmetacast*(self: gen_qscilexerd_types.QsciLexerD, param1: cstring): pointer =

  fQsciLexerD_virtualbase_metacast(self.h, param1)

type QsciLexerDmetacastProc* = proc(param1: cstring): pointer
proc onmetacast*(self: gen_qscilexerd_types.QsciLexerD, slot: QsciLexerDmetacastProc) =
  # TODO check subclass
  var tmp = new QsciLexerDmetacastProc
  tmp[] = slot
  GC_ref(tmp)
  fcQsciLexerD_override_virtual_metacast(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QsciLexerD_metacast(self: ptr cQsciLexerD, slot: int, param1: cstring): pointer {.exportc: "miqt_exec_callback_QsciLexerD_metacast ".} =
  var nimfunc = cast[ptr QsciLexerDmetacastProc](cast[pointer](slot))
  let slotval1 = (param1)


  let virtualReturn = nimfunc[](slotval1 )

  virtualReturn
proc QsciLexerDmetacall*(self: gen_qscilexerd_types.QsciLexerD, param1: cint, param2: cint, param3: pointer): cint =

  fQsciLexerD_virtualbase_metacall(self.h, cint(param1), param2, param3)

type QsciLexerDmetacallProc* = proc(param1: cint, param2: cint, param3: pointer): cint
proc onmetacall*(self: gen_qscilexerd_types.QsciLexerD, slot: QsciLexerDmetacallProc) =
  # TODO check subclass
  var tmp = new QsciLexerDmetacallProc
  tmp[] = slot
  GC_ref(tmp)
  fcQsciLexerD_override_virtual_metacall(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QsciLexerD_metacall(self: ptr cQsciLexerD, slot: int, param1: cint, param2: cint, param3: pointer): cint {.exportc: "miqt_exec_callback_QsciLexerD_metacall ".} =
  var nimfunc = cast[ptr QsciLexerDmetacallProc](cast[pointer](slot))
  let slotval1 = cint(param1)

  let slotval2 = param2

  let slotval3 = param3


  let virtualReturn = nimfunc[](slotval1, slotval2, slotval3 )

  virtualReturn
proc QsciLexerDsetFoldAtElse*(self: gen_qscilexerd_types.QsciLexerD, fold: bool): void =

  fQsciLexerD_virtualbase_setFoldAtElse(self.h, fold)

type QsciLexerDsetFoldAtElseProc* = proc(fold: bool): void
proc onsetFoldAtElse*(self: gen_qscilexerd_types.QsciLexerD, slot: QsciLexerDsetFoldAtElseProc) =
  # TODO check subclass
  var tmp = new QsciLexerDsetFoldAtElseProc
  tmp[] = slot
  GC_ref(tmp)
  fcQsciLexerD_override_virtual_setFoldAtElse(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QsciLexerD_setFoldAtElse(self: ptr cQsciLexerD, slot: int, fold: bool): void {.exportc: "miqt_exec_callback_QsciLexerD_setFoldAtElse ".} =
  var nimfunc = cast[ptr QsciLexerDsetFoldAtElseProc](cast[pointer](slot))
  let slotval1 = fold


  nimfunc[](slotval1)
proc QsciLexerDsetFoldComments*(self: gen_qscilexerd_types.QsciLexerD, fold: bool): void =

  fQsciLexerD_virtualbase_setFoldComments(self.h, fold)
